# build-counter

./: Cargo.toml  Rocket.toml  build_counter.toml  readme.md
.github/workflows/: build  build.yml
api-server/: Cargo.toml
api-server-macros/: Cargo.toml
api-server-macros/src/: lib.rs
api-server/migrations/2019-12-23-185214_create_initial_tables/: down.sql  up.sql
api-server/src/: app.rs  config.rs  error_response.rs  frontend_url.rs  github_client_info.rs  jwt.rs  jwt_secret.rs  main.rs  main_db_conn.rs  models.rs  redirect.rs  ruuid.rs  schema.rs  session.rs  user_management.rs  utils.rs
api-server/src/api/: user.rs
api-server/src/db/: mod.rs  sessions.rs  system_data.rs  users.rs
web-client/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
web-client/src/: index.html
web-client/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts
web-client/src/app/modules/configurator/: configurator-routing.module.ts  configurator.module.ts
web-client/src/app/modules/home-page/: home-page-routing.module.ts  home-page.module.ts
web-client/src/app/modules/home-page/components/front-page/: front-page.component.html  front-page.component.spec.ts  front-page.component.ts
web-client/src/app/modules/models/: user.ts
web-client/src/app/modules/services/: auth.interceptor.ts  authorization-state.service.ts  authorized-user.service.ts  index.ts  local-storage.service.ts  user.service.ts
web-client/src/app/modules/utils/: index.ts  jwt.ts  login.ts
web-client/src/app/modules/utils/operators/: index.ts  sharing-is-caring.ts
web-client/src/environments/: environment.prod.ts  environment.ts  ienvironment.ts
