[package]
name = "api-server"
version = "0.1.0"
authors = ["Rasmus <hansen13579@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
rocket = "0.4.2"
diesel = { version = "1.0.0", features = ["postgres"] }
diesel_migrations = "1.4.0"
uuid = "0.8.1"

[dependencies.rocket_contrib]
version = "0.4.2"
features = ["diesel_postgres_pool"]