[package]
name = "api-server"
version = "0.1.0"
authors = ["Rasmus <hansen13579@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
rocket = "0.4"
diesel = { version = "1.4", features = ["postgres", "uuid"] }
diesel_migrations = "1.4"
uuid = { version = "0.6", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_contrib = {version = "0.4", features = ["diesel_postgres_pool", "json"]}
log = "0.4"
env_logger = "0.7"
oauth2 = "3.0.0-alpha.7"
api-server-macros = {path = "../api-server-macros"}
reqwest = {version = "0.9"}