[package]
name = "api-server"
version = "0.1.0"
authors = ["Rasmus <hansen13579@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
diesel = { version = "1.4", features = ["postgres", "uuid", "r2d2"] }
diesel_migrations = "1.4"
uuid = { version = "0.6", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.7"
oauth2 = "3.0.0-alpha.7"
api-server-macros = {path = "../api-server-macros"}
reqwest = {version = "0.9"}
jsonwebtoken = "7.0.0-alpha.2"
rand = "0.7"
itertools = "0.8"
url = "2.1"
actix-rt = "1.0"
actix-web = "2.0"
actix-utils = "1.0"
actix-session = "0.3"
actix-cors = "0.2"
actix-service = "1.0"
actix-http = "1.0"
r2d2 = "0.8"
config = "0.10"
futures = "0.3"
